# dataprof

./: .clippy.toml  .gitignore  .mailmap  .markdownlint.yaml  .pre-commit-config.yaml  .rustfmt.toml  .trufflehogignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  LICENSE-APACHE  Makefile  NAMING_CONVENTIONS_ANALYSIS.md  PYTHON.md  README.md  SECURITY.md  batch_report.html  cliff.toml  clippy.toml  codecov.yml  deny.toml  justfile  pyproject.toml  tarpaulin.toml  test.csv  test_sampling.rs
.cargo/: audit.toml  config.toml
.cursor/rules/: dataprof.md  dataprof.mdc
.devcontainer/: .env.example  Dockerfile  README.md  compose.yml  devcontainer.json  docker-compose.yml  test_live_databases.sh
.devcontainer/test-data/: large-sample.csv  sample.csv
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/ISSUE_TEMPLATES/: bug_report.md
.github/scripts/: build_benchmark_pages.py  check_decode_audit.py  contributor_smoke.py  wheel_smoke.py
.github/templates/: dashboard.html  dashboard.js
.github/workflows/: README.md  benchmarks.yml  ci.yml  coverage.yml  deploy-benchmarks.yml  deploy-pages.yml  optimize.yml  (+8 more)
benches/: benchmarks.rs  domain_benchmarks.rs  large_scale_benchmarks.rs  memory_benchmarks.rs  simple_benchmarks.rs  statistical_benchmark.rs  unified_benchmarks.rs
benchmark-results/: .gitkeep
crates/dataprof-core/: Cargo.toml  README.md
crates/dataprof-core/src/: classification.rs  config.rs  errors.rs  execution.rs  lib.rs  memory_sampler.rs  memory_tracker.rs  output.rs  partial.rs  pattern.rs  profile.rs  progress.rs  quality.rs  semantic.rs  serde_helpers.rs  source.rs  stop_condition.rs  validation.rs
crates/dataprof-core/src/sampling/: chunk_size.rs  mod.rs  reservoir.rs  sampler.rs  strategies.rs
crates/dataprof-csv/: Cargo.toml  README.md
crates/dataprof-csv/src/: lib.rs  memmap_reader.rs  robust_csv.rs
crates/dataprof-db/: Cargo.toml  README.md
crates/dataprof-db/src/: connection.rs  lib.rs  retry.rs  sampling.rs  streaming.rs
crates/dataprof-db/src/connectors/: common.rs  mysql.rs  postgres.rs  sqlite.rs
crates/dataprof-db/src/security/: connection_security.rs  credentials.rs  environment.rs  mod.rs  sql_validation.rs  ssl_config.rs  utils.rs
crates/dataprof-db/tests/: column_decoding.rs
crates/dataprof-engines/: Cargo.toml  README.md
crates/dataprof-engines/src/: adaptive.rs  common.rs  lib.rs  progress_tracker.rs
crates/dataprof-engines/src/columnar/: mod.rs
crates/dataprof-engines/src/streaming/: async_reader.rs  async_source.rs  incremental.rs  memmap.rs  mod.rs
crates/dataprof-json/: Cargo.toml  README.md
crates/dataprof-json/src/: lib.rs
crates/dataprof-metrics/: Cargo.toml  README.md
crates/dataprof-metrics/src/: core.rs  lib.rs  quality.rs  serde_helpers.rs  types.rs
crates/dataprof-metrics/src/analysis/: column.rs  inference.rs  mod.rs  patterns.rs  validators.rs
crates/dataprof-metrics/src/analysis/metrics/: accuracy.rs  completeness.rs  consistency.rs  hint_binding.rs  mod.rs  precision.rs  testing.rs  timeliness.rs  uniqueness.rs  utils.rs  validity.rs
crates/dataprof-metrics/src/stats/: cardinality.rs  datetime.rs  mod.rs  numeric.rs  text.rs
crates/dataprof-parquet/: Cargo.toml  README.md
crates/dataprof-parquet/src/: arrow_profiler.rs  async_http.rs  lib.rs  parser.rs  record_batch_analyzer.rs
crates/dataprof-partial/: Cargo.toml  README.md
crates/dataprof-partial/src/: lib.rs
crates/dataprof-python/: Cargo.toml  README.md
crates/dataprof-python/src/: analysis.rs  arrow_export.rs  async_streaming.rs  columns.rs  config.rs  database_async.rs  errors.rs  lib.rs  partial.rs  progress.rs  sampling.rs  stop_condition.rs  types.rs
crates/dataprof-runtime/: Cargo.toml  README.md
crates/dataprof-runtime/src/: async_source.rs  hint_binding.rs  lib.rs  memory_config.rs  profile_builder.rs  profile_report.rs  report_assembler.rs  streaming_stats.rs
docs/: CHANGELOG.md  CLI_USAGE_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  DataProfiler v0.3.md  IDE_SETUP.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  WHAT_DATAPROF_DOES.md  apache-arrow-integration.md  performance-guide.md  release-notes.md  roadmap.md  v03_verification_report.md
examples/: README.md  advanced_database_test.rs  arrow_example.rs  async_database_example.py  before_after_cleaning.rs  config_builder_example.rs  customer_data_clean.csv  database_examples.rs  edge_cases_nightmare.csv  etl_quality_gate.rs  iso_compliance.rs  large_mixed_data.csv  logs.jsonl  messy_csv_inspection.rs  one_billion_rows.rs  parquet_example.rs  performance_stress_test.csv  sales_data_problematic.csv  sample_data.csv  sensor_data_outliers.csv  test_cli.html  test_data.json  test_logs.jsonl  users.json  users_report.html
notebooks/: dataprof-demo.ipynb  dataprof-demo041.ipynb  dataprof-demo045.ipynb  dataprof-demo046.ipynb
python/: example.py  pytest.ini  test_bindings.py
scripts/: benchmark_comparison.py  comprehensive_benchmark_matrix.py  coverage_simple.ps1  performance_regression_check.py  setup-dev.ps1  setup-dev.sh
site/: 404.html  index.html  style.css
src/: lib.rs  main.rs  python.rs  reporter.rs  sampler.rs  serde_helpers.rs  types.rs
templates/: batch_dashboard.hbs  single_report.hbs
tests/: adaptive_engine_tests.rs  arrow_integration_test.rs  arrow_performance_test.rs  async_streaming.rs  boolean_columns.rs  cli_basic_tests.rs  cross_engine_consistency.rs  data_quality_metrics_test.rs  data_quality_simple.rs  database_heavy.rs  database_integration.rs  error_contract.rs  error_handling_simple.rs  execution_controls.rs  integration.rs  integration_comprehensive.rs  integration_tests.rs  iso_compliance_test.rs  metrics_scientific_validation.rs  parquet_integration_test.rs  public_api_facade.rs  ragged_rows.rs  sampling_strategies.rs  security_tests.rs  semantic_hints.rs  v030_streaming_tests.rs  v03_comprehensive.rs
(+257 files in other folders)
