[workspace]
members = [
    "crates/dataprof-core",
    "crates/dataprof-metrics",
    "crates/dataprof-csv",
    "crates/dataprof-json",
    "crates/dataprof-parquet",
    "crates/dataprof-engines",
    "crates/dataprof-partial",
    "crates/dataprof-db",
    "crates/dataprof-python",
    "crates/dataprof-runtime",
]
resolver = "3"

[package]
name = "dataprof"
version = "0.8.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Andrea Bozzo"]
description = "High-performance data profiler with ISO 8000/25012 quality metrics for CSV, JSON/JSONL, and Parquet files"
repository = "https://github.com/AndreaBozzo/dataprof"
keywords = ["data", "analysis", "profiling", "data-quality", "parquet"]
categories = ["data-structures"]
readme = "README.md"
documentation = "https://docs.rs/dataprof"
homepage = "https://github.com/AndreaBozzo/dataprof"
exclude = [
    "assets/animations/*",
    "assets/images/*.png",
    "examples/*",
    ".venv/*",
    ".mypy_cache/*",
    "python/*",
    ".github/*",
]

# Configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "warn"

[lints.clippy]

all = "deny"



[dependencies]
dataprof-core = { version = "0.8.0", path = "crates/dataprof-core" }
dataprof-metrics = { version = "0.8.0", path = "crates/dataprof-metrics" }
dataprof-csv = { version = "0.8.0", path = "crates/dataprof-csv" }
dataprof-engines = { version = "0.8.0", path = "crates/dataprof-engines", default-features = false }
dataprof-json = { version = "0.8.0", path = "crates/dataprof-json" }
dataprof-parquet = { version = "0.8.0", path = "crates/dataprof-parquet", optional = true, default-features = false }
dataprof-partial = { version = "0.8.0", path = "crates/dataprof-partial", default-features = false }
dataprof-db = { version = "0.8.0", path = "crates/dataprof-db", optional = true, default-features = false }
dataprof-runtime = { version = "0.8.0", path = "crates/dataprof-runtime" }

# Note: Async support is available via async-streaming and database feature flags.

tokio = { version = "1.49", features = ["full"], optional = true }  # Latest: 1.48.0 (patch available via cargo update)
bytes = { version = "1.10", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"], optional = true }

[dev-dependencies]
tempfile = "3.24"
anyhow = "1.0"
env_logger = "0.11"
arrow = { version = "57.3.0", features = ["ffi"] }
parquet = { version = "57.3.0", features = ["arrow"] }
sqlx = { version = "0.8.1", features = [
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
    "sqlite",
], default-features = false }

proptest = "1.9"  # Updated: 1.8.0 -> 1.10.0 (minor bump, backward compatible)


criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1.0"

serial_test = "3.4.0"
predicates = "3.1"

[[bench]]
name = "benchmarks"
harness = false



[profile.dev]
opt-level = 0             
debug = true               
split-debuginfo = "packed" 
incremental = true         
codegen-units = 256        


[profile.test]
opt-level = 1
debug = 2
incremental = true
codegen-units = 256

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true      


[profile.release-lto]
inherits = "release"


[profile.ci]
inherits = "test"
opt-level = 0        
debug = 2            
incremental = false  
codegen-units = 1    

[profile.dev.package."*"]
opt-level = 1 

[profile.test.package."*"]
opt-level = 1 


[features]
default = ["parquet"]

arrow = [
    "dataprof-core/arrow",
    "dep:dataprof-parquet",
    "dataprof-parquet/arrow",
    "dataprof-engines/arrow",
]
parquet = [
    "arrow",
    "dataprof-parquet/parquet",
    "dataprof-engines/parquet",
    "dataprof-partial/parquet",
]
database = ["dep:dataprof-db", "dataprof-core/database"]
async-streaming = [
    "dep:tokio",
    "dep:bytes",
    "dep:reqwest",
    "dataprof-core/async-streaming",
    "dataprof-runtime/async-streaming",
    "dataprof-engines/async-streaming",
    "dataprof-partial/async-streaming",
]
parquet-async = [
    "parquet",
    "dep:reqwest",
    "async-streaming",
    "dataprof-parquet/parquet-async",
    "dataprof-runtime/parquet-async",
    "dataprof-engines/parquet-async",
]
postgres = ["database", "dep:tokio", "dataprof-db/postgres"]
mysql = ["database", "dep:tokio", "dataprof-db/mysql"]
sqlite = ["database", "dep:tokio", "dataprof-db/sqlite"]

all-db = ["postgres", "mysql", "sqlite"] 


# Library configuration - rlib only for Rust use.
# Python extension builds live in crates/dataprof-python.
[lib]
name = "dataprof"
path = "crates/dataprof/src/lib.rs"
crate-type = ["rlib"]
