[workspace]
members = [
    "crates/dataprof-core",
    "crates/dataprof-metrics",
    "crates/dataprof-csv",
    "crates/dataprof-json",
    "crates/dataprof-parquet",
    "crates/dataprof-engines",
    "crates/dataprof-partial",
    "crates/dataprof-db",
    "crates/dataprof-python",
    "crates/dataprof-runtime",
]
resolver = "3"

# Shared package metadata inherited by every workspace member via `field.workspace = true`.
[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
authors = ["Andrea Bozzo"]
repository = "https://github.com/AndreaBozzo/dataprof"

# Single source of truth for dependency versions. Members reference these with
# `dep.workspace = true` and may add `optional`, `features`, or `default-features` locally.
[workspace.dependencies]
# Internal crates
dataprof = { version = "0.9.0", path = "." }
dataprof-core = { version = "0.9.0", path = "crates/dataprof-core" }
dataprof-metrics = { version = "0.9.0", path = "crates/dataprof-metrics" }
dataprof-csv = { version = "0.9.0", path = "crates/dataprof-csv" }
dataprof-json = { version = "0.9.0", path = "crates/dataprof-json" }
dataprof-parquet = { version = "0.9.0", path = "crates/dataprof-parquet" }
dataprof-engines = { version = "0.9.0", path = "crates/dataprof-engines" }
dataprof-partial = { version = "0.9.0", path = "crates/dataprof-partial" }
dataprof-db = { version = "0.9.0", path = "crates/dataprof-db" }
dataprof-runtime = { version = "0.9.0", path = "crates/dataprof-runtime" }

# External dependencies
anyhow = "1.0"
arrow = { version = "58.1.0", features = ["ffi"] }
async-trait = "0.1"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.4"
futures = "0.3.31"
glob = "0.3"
log = "0.4"
memmap2 = "0.9"
num_cpus = "1.16"
parquet = { version = "58.1.0", features = ["arrow"] }
pyo3 = { version = "0.29", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
rand = { version = "0.9.3", features = ["small_rng"] }
rand_chacha = "0.9"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio-rustls", "chrono", "uuid"] }
sysinfo = "0.39"
thiserror = "2.0"
tokio = "1.49"
tokio-util = { version = "0.7", features = ["io-util"] }
toml = "0.9.8"
url = "2.5.8"
uuid = { version = "1.0", features = ["v4"] }
wide = "1.2.0"
# Dev dependencies
criterion = { version = "0.8", features = ["html_reports"] }
env_logger = "0.11"
predicates = "3.1"
proptest = "1.9"
serial_test = "3.4.0"
tempfile = "3.24"

[package]
name = "dataprof"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "High-performance data profiler with ISO 8000/25012 quality metrics for CSV, JSON/JSONL, and Parquet files"
keywords = ["data", "analysis", "profiling", "data-quality", "parquet"]
categories = ["data-structures"]
readme = "README.md"
documentation = "https://docs.rs/dataprof"
homepage = "https://andreabozzo.github.io/dataprof/"
exclude = [
    "assets/animations/*",
    "assets/images/*.png",
    "examples/*",
    ".venv/*",
    ".mypy_cache/*",
    "python/*",
    ".github/*",
    "site/*",
]

# Configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "warn"

[lints.clippy]

all = "deny"



[dependencies]
dataprof-core = { workspace = true }
dataprof-metrics = { workspace = true }
dataprof-csv = { workspace = true }
dataprof-engines = { workspace = true }
dataprof-json = { workspace = true }
dataprof-parquet = { workspace = true, optional = true }
dataprof-partial = { workspace = true }
dataprof-db = { workspace = true, optional = true }
dataprof-runtime = { workspace = true }

# Note: Async support is available via async-streaming and database feature flags.
tokio = { workspace = true, features = ["full"], optional = true }
bytes = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
proptest = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
predicates = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false



[profile.dev]
opt-level = 0             
debug = true               
split-debuginfo = "packed" 
incremental = true         
codegen-units = 256        


[profile.test]
opt-level = 1
debug = 2
incremental = true
codegen-units = 256

[profile.release]
lto = true
codegen-units = 1
# NOTE: do NOT set `panic = "abort"` here. This profile builds the PyO3 extension
# wheel (release.yml uses `maturin --release`), and PyO3 relies on stack unwinding
# to convert Rust panics into catchable Python exceptions. `panic = "abort"` would
# turn any panic into a hard interpreter crash (SIGABRT) instead.
strip = true


[profile.release-lto]
inherits = "release"


[profile.ci]
inherits = "test"
opt-level = 0        
debug = 2            
incremental = false  
codegen-units = 1    

[profile.dev.package."*"]
opt-level = 1 

[profile.test.package."*"]
opt-level = 1 


[features]
default = ["parquet"]

arrow = [
    "dataprof-core/arrow",
    "dep:dataprof-parquet",
    "dataprof-parquet/arrow",
    "dataprof-engines/arrow",
]
parquet = [
    "arrow",
    "dataprof-parquet/parquet",
    "dataprof-engines/parquet",
    "dataprof-partial/parquet",
]
database = ["dep:dataprof-db", "dataprof-core/database"]
async-streaming = [
    "dep:tokio",
    "dep:bytes",
    "dep:reqwest",
    "dataprof-core/async-streaming",
    "dataprof-runtime/async-streaming",
    "dataprof-engines/async-streaming",
    "dataprof-partial/async-streaming",
]
parquet-async = [
    "parquet",
    "dep:reqwest",
    "async-streaming",
    "dataprof-parquet/parquet-async",
    "dataprof-runtime/parquet-async",
    "dataprof-engines/parquet-async",
]
postgres = ["database", "dep:tokio", "dataprof-db/postgres"]
mysql = ["database", "dep:tokio", "dataprof-db/mysql"]
sqlite = ["database", "dep:tokio", "dataprof-db/sqlite"]

all-db = ["postgres", "mysql", "sqlite"] 


# Library configuration - rlib only for Rust use.
# Python extension builds live in crates/dataprof-python.
[lib]
name = "dataprof"
path = "crates/dataprof/src/lib.rs"
crate-type = ["rlib"]
