[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "dataprof"
description = "Fast, lightweight data profiling and quality assessment library"
authors = [{name = "Andrea Bozzo", email = "andreabozzo92@gmail.com"}]
requires-python = ">=3.8"
dependencies = []

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["data", "profiling", "quality", "csv", "json", "analysis", "performance"]
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/AndreaBozzo/dataprof"
Repository = "https://github.com/AndreaBozzo/dataprof"
Issues = "https://github.com/AndreaBozzo/dataprof/issues"

[project.optional-dependencies]
pandas = ["pandas>=1.3.0"]
jupyter = ["pandas>=1.3.0", "ipython>=7.0.0"]
all = ["pandas>=1.3.0", "ipython>=7.0.0", "numpy>=1.20.0"]
database = []  # No Python deps; requires Rust feature flags: python-async,database,sqlite

[dependency-groups]
dev = [
    "maturin>=1.5,<2.0",
    "pytest>=8.0",
    "ruff>=0.9",
    "pandas>=1.3.0",
    "polars>=0.20",
    "pyarrow>=14.0",
]

[tool.maturin]
features = ["python"]
module-name = "dataprof._dataprof"
python-source = "python"
# Exclude CLI binary from Python builds - only build the library
bindings = "pyo3"

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v -ra -l --strict-markers -W default"
markers = [
    "slow: Tests that take longer to run",
    "integration: Integration tests requiring multiple components",
    "database: Database integration tests (require database feature flags)",
]
