[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "dataprof"
description = "Fast, lightweight data profiling and quality assessment library"
authors = [{name = "Andrea Bozzo", email = "andreabozzo92@gmail.com"}]
requires-python = ">=3.10"
dependencies = []

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["data", "profiling", "quality", "csv", "json", "analysis", "performance"]
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/AndreaBozzo/dataprof"
Repository = "https://github.com/AndreaBozzo/dataprof"
Issues = "https://github.com/AndreaBozzo/dataprof/issues"

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
jupyter = ["pandas>=2.0.0", "ipython>=8.0.0"]
all = ["pandas>=2.0.0", "ipython>=8.0.0", "numpy>=1.23.0"]
database = []  # No Python deps; compile the extension with python-async,database,<connector>

[dependency-groups]
dev = [
    "maturin>=1.5,<2.0",
    "pytest>=8.0",
    "ruff>=0.9",
    "ty>=0.0.56",
    "pandas>=2.0.0",
    "polars>=1.0.0",
    "pyarrow>=14.0",
]

[tool.maturin]
features = ["python"]
manifest-path = "crates/dataprof-python/Cargo.toml"
module-name = "dataprof._dataprof"
python-source = "python"
bindings = "pyo3"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ty.environment]
# Match requires-python floor; the extension module is stubbed in
# python/dataprof/_dataprof.pyi so ty can resolve the compiled core.
python-version = "3.10"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.isort]
# Keep `from x import (a as a, b as b)` re-export blocks (e.g. __init__.pyi) combined.
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v -ra -l --strict-markers -W default"
markers = [
    "slow: Tests that take longer to run",
    "integration: Integration tests requiring multiple components",
    "database: Database integration tests (require database feature flags)",
]
