[package]
name = "dataprof-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared core types for dataprof"

[dependencies]
anyhow = { workspace = true }
csv = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
sysinfo = { workspace = true }
arrow = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
arrow = ["dep:arrow"]
async-streaming = ["dep:tokio"]
database = []
# Message-only flag: lets error diagnostics advertise Parquet support accurately
# when the workspace is built with the facade's `parquet` feature. Enables no code.
parquet = []