[package]
name = "dataprof-csv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CSV parsing and profiling support for dataprof"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
csv = { workspace = true }
dataprof-core = { workspace = true }
dataprof-runtime = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
