[package]
name = "dataprof-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Database connectivity and query profiling support for dataprof"

[features]
default = []
postgres = ["dep:sqlx", "sqlx/postgres"]
mysql = ["dep:sqlx", "sqlx/mysql"]
sqlite = ["dep:sqlx", "sqlx/sqlite"]
all-db = ["postgres", "mysql", "sqlite"]

[dependencies]
async-trait = { workspace = true }
dataprof-core = { workspace = true }
dataprof-metrics = { workspace = true }
dataprof-runtime = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
