[package]
name = "dataprof-engines"
version = "0.7.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Andrea Bozzo"]
description = "Streaming and adaptive profiling engines for dataprof"

[features]
default = []
arrow = ["dep:dataprof-parquet", "dataprof-parquet/arrow"]
parquet = ["arrow", "dataprof-parquet/parquet"]
async-streaming = [
    "dep:csv",
    "dep:serde",
    "dep:serde_json",
    "dep:tokio",
    "dep:tokio-util",
    "dep:uuid",
    "dataprof-core/async-streaming",
    "dataprof-runtime/async-streaming",
]
parquet-async = ["async-streaming", "dataprof-runtime/parquet-async"]

[dependencies]
csv = { version = "1.4", optional = true }
dataprof-core = { path = "../dataprof-core" }
dataprof-csv = { path = "../dataprof-csv" }
dataprof-parquet = { path = "../dataprof-parquet", optional = true, default-features = false }
dataprof-runtime = { path = "../dataprof-runtime" }
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
tokio = { version = "1.49", features = ["full"], optional = true }
tokio-util = { version = "0.7", features = ["io-util"], optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }

[dev-dependencies]
anyhow = "1.0"
bytes = "1.10"
tempfile = "3.24"
