[package]
name = "dataprof-engines"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Streaming and adaptive profiling engines for dataprof"
readme = "README.md"

[features]
default = []
arrow = ["dep:dataprof-parquet", "dataprof-parquet/arrow"]
parquet = ["arrow", "dataprof-parquet/parquet"]
async-streaming = [
    "dep:serde",
    "dep:serde_json",
    "dep:tokio",
    "dep:tokio-util",
    "dep:uuid",
    "dataprof-core/async-streaming",
    "dataprof-runtime/async-streaming",
]
parquet-async = ["async-streaming", "dataprof-runtime/parquet-async"]

[dependencies]
csv = { workspace = true }
dataprof-core = { workspace = true }
dataprof-csv = { workspace = true }
dataprof-parquet = { workspace = true, optional = true }
dataprof-runtime = { workspace = true }
log = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tokio-util = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
tempfile = { workspace = true }
