[package]
name = "dataprof-json"
version = "0.8.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Andrea Bozzo"]
description = "JSON and JSONL scanning support for dataprof"

[dependencies]
dataprof-core = { version = "0.8.0", path = "../dataprof-core" }
dataprof-runtime = { version = "0.8.0", path = "../dataprof-runtime" }
serde = "1.0"
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.24"
