[package]
name = "dataprof-json"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "JSON and JSONL scanning support for dataprof"

[dependencies]
dataprof-core = { workspace = true }
dataprof-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
