[package]
name = "dataprof-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Metrics and statistical analysis engine for dataprof"
readme = "README.md"

[dependencies]
chrono = { workspace = true }
dataprof-core = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
wide = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
