[package]
name = "dataprof-parquet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Parquet profiling support for dataprof"
readme = "README.md"

[features]
default = []
arrow = ["dep:arrow", "dep:csv", "dep:dataprof-csv", "dataprof-core/arrow"]
parquet = ["dep:parquet", "arrow"]
parquet-async = ["parquet", "parquet/async", "dep:bytes", "dep:futures", "dep:reqwest"]

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
csv = { workspace = true, optional = true }
dataprof-core = { workspace = true }
dataprof-csv = { workspace = true, optional = true }
dataprof-metrics = { workspace = true }
dataprof-runtime = { workspace = true }
futures = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
