[package]
name = "dataprof-partial"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Fast schema inference and row-count APIs for dataprof"
readme = "README.md"

[features]
default = []
parquet = ["dep:arrow", "dep:parquet", "dataprof-core/arrow"]
async-streaming = [
    "dep:bytes",
    "dep:tokio",
    "dep:tokio-util",
    "dataprof-core/async-streaming",
    "dataprof-runtime/async-streaming",
]

[dependencies]
arrow = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
csv = { workspace = true }
dataprof-core = { workspace = true }
dataprof-csv = { workspace = true }
dataprof-json = { workspace = true }
dataprof-runtime = { workspace = true }
parquet = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
tokio-util = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
